# linenoise

./: .buckconfig  .clang-format  .gitignore  .gitmodules  .robuild.yaml  .travis.yml  BUCK  CMakeLists.txt  LICENSE  LTMake  LTProject  Makefile  Makefile.am  README.markdown  README.md  buckaroo.lock.toml  buckaroo.toml  build.zig  cctree.out  conanfile.py  configure.ac  cscope.out  example-vs2010.vcxproj  example.c  ht.c  ht.h  libline.c  libline.h  linenoise  linenoise-vs2010.vcxproj  linenoise-vs2010.vcxproj.filters  linenoise-win32.c  linenoise.c  linenoise.cpp  linenoise.h  linenoise.hpp  main.c  make.bat  makefile  monolithic_examples.h  (+6 more)
.github/workflows/: ci.yml
RISCOS/: .gitignore  MakefileExample,fe1  MakefileLib,fe1  genlinks.makefile
RISCOS/c/: ro_cursors
RISCOS/h/: ro_cursors
RISCOS/module/: Makefile,fe1  VersionNum
RISCOS/module/c/: module
RISCOS/module/cmhg/: modhead
RISCOS/module/h/: asm  modhead
RISCOS/module/s/: asm
encodings/: utf8.c
example/: example.c
include/: Makefile.am  linenoise.h
src/: ConvertUTF.cpp  ConvertUTF.h  Makefile.am  linenoise.c  linenoise.cpp  linenoise_convert_utf.c  linenoise_convert_utf.h  wcwidth.c  wcwidth.cpp
tst/: LINENOISE-NG.sln  LINENOISE-NG.vcxproj  Makefile.am  example.c  history
